--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  <app-search-component></app-search-component>
+    <hr />
     <app-deptsender-component></app-deptsender-component>
     <hr />
     <app-empreceiver-component></app-empreceiver-component>
